@@ -228,6 +228,8 @@ New Features
 
 56. SOLR-1051: Support the merge of multiple indexes as a CoreAdmin and an update command (Ning Li via shalin)
 
+57. SOLR-1152: Snapshoot on ReplicationHandler should acccept location as a request parameter (shalin)
+
 Optimizations
 ----------------------
  1. SOLR-374: Use IndexReader.reopen to save resources by re-using parts of the
